tests/good/interpret/052-pattern-sum-no-sub-pattern.clap
val c = (case { A[x] => x })(A)

