tests/bad/interpret/012-case-constr-no-match.clap
val x = (case { A[x] => x })(B[42])
